tests/errors/phantom-check/loop.fil
comp Foo<@G:1>() -> () {}
comp main<@G:1>() -> () {
    F := new Foo;
    for i in 0..3 {
        f := F<@G>();
    }
}